# TaqNG

./: CMakeLists.txt  README.md
TaqNG/: CMakeLists.txt
TaqNG/include/taq/: id3v2.h  mp3filesmodel.h  myframesmodel.h  mytag.h  progresswatcher.hpp  util.h  wmainwindow.h
TaqNG/src/: id3v2.cpp  util.cpp  wmainwindow.cpp  wmainwindow_apic.cpp  wmainwindow_id3v2.cpp  wmainwindow_multi.cpp  wmainwindow_strip.cpp
